# warstage

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  README.md
.github/workflows/: cmake.yml  engine.yml  test.yml  webapp.yml
docs/: modding.md
engine/: .gitignore  CMakeLists.txt  main.cpp
engine/lib/: .gitignore  boost.sh  glm.sh  khronos.sh
engine/src/async/: mutex.cpp  mutex.h  mutex.test.cpp  promise.cpp  promise.h  promise.test.cpp  shutdownable.cpp  shutdownable.h  shutdownable.test.cpp  strand-asio.cpp  strand-asio.h  strand-base.cpp  strand-base.h  strand-manual.cpp  strand-manual.h  strand.cpp  strand.h  strand.test.cpp
engine/src/battle-audio/: sound-director.cpp  sound-director.h
engine/src/battle-gestures/: camera-control.cpp  camera-control.h  camera-gesture.cpp  camera-gesture.h  command-gesture.cpp  command-gesture.h  editor-gesture.cpp  editor-gesture.h  editor-model.cpp  editor-model.h  unit-controller.cpp  unit-controller.h
engine/src/battle-model/: battle-sm.h  battle-vm.cpp  battle-vm.h  height-map.cpp  height-map.h  height-map.test.cpp  image-tiles.cpp  image-tiles.h  terrain-map.cpp  terrain-map.h
engine/src/battle-simulator/: battle-objects.cpp  battle-objects.h  battle-simulator.cpp  battle-simulator.h  convert-value.cpp  convert-value.h
engine/src/battle-view/: battle-animator.cpp  battle-animator.h  battle-view.cpp  battle-view.h  camera-state.cpp  camera-state.h  render-background.cpp  render-background.h  render-body.cpp  render-body.h  render-debug.cpp  render-debug.h  render-facing.cpp  render-facing.h  render-marker.cpp  render-marker.h  render-movement.cpp  render-movement.h  render-phantom.cpp  render-phantom.h  render-range.cpp  render-range.h  render-selection.cpp  render-selection.h  render-sky.cpp  render-sky.h  render-terrain.cpp  render-terrain.h  render-water.cpp  render-water.h  shaders.cpp  shaders.h
engine/src/geometry/: b-spline-patch.cpp  b-spline-patch.h  b-spline.cpp  b-spline.h  bounds.h  geometry.cpp  geometry.h  quad-tree.cpp  quad-tree.h  velocity-sampler.cpp  velocity-sampler.h
engine/src/gesture/: gesture.cpp  gesture.h  pointer.cpp  pointer.h  surface.cpp  surface.h
engine/src/graphics/: framebuffer.cpp  framebuffer.h  graphics-api.cpp  graphics-api.h  graphics.cpp  graphics.h  pipeline.cpp  pipeline.h  program.cpp  program.h  renderbuffer.cpp  renderbuffer.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex-buffer.cpp  vertex-buffer.h  vertex.cpp  vertex.h  viewport.cpp  viewport.h
engine/src/image/: gaussian-blur.cpp  gaussian-blur.h  image.cpp  image.h  lodepng.cpp
engine/src/matchmaker/: battle-supervisor.cpp  battle-supervisor.h  lobby-supervisor.cpp  lobby-supervisor.h  lobby-supervisor.test.cpp  master-supervision-policy.cpp  master-supervision-policy.h
engine/src/player/: player-backend.cpp  player-backend.h  player-endpoint.cpp  player-endpoint.h  player-frontend.cpp  player-frontend.h  player-session.cpp  player-session.h  player-window.cpp  player-window.h
engine/src/runtime/: endpoint.cpp  endpoint.h  event-class.cpp  event-class.h  federate.cpp  federate.h  federation.cpp  federation.h  mock-endpoint.cpp  mock-endpoint.h  mock-session.cpp  mock-session.h  object-class.cpp  object-class.h  object.cpp  object.h  ownership-state.test.cpp  ownership.cpp  ownership.h  ownership.test.cpp  runtime-fixture-auto_correct.test.cpp  runtime-fixture-ownership_divestiture.test.cpp  runtime-fixture-ownership_negotiation.test.cpp  runtime-fixture-ownership_policy.test.cpp  runtime-fixture-ownership_unpublish.test.cpp  runtime-fixture-startup-shutdown.test.cpp  runtime-fixture-sync_object.test.cpp  runtime-fixture.h  runtime.cpp  runtime.h  service-class.cpp  service-class.h  session-federate.cpp  session-federate.h  session.cpp  session.h  supervision-policy.cpp  supervision-policy.h  web-socket-endpoint.cpp  web-socket-endpoint.h  (+2 more)
engine/src/utilities/: dictionary.h  logging.cpp  logging.h  memory.h  memory.test.cpp
engine/src/value/: buffer.h  builder.h  builder.test.cpp  compressor.cpp  compressor.h  compressor.test.cpp  decompressor.cpp  decompressor.h  dictionary.cpp  dictionary.h  json.cpp  json.h  json.test.cpp  object-id.h  value.cpp  value.h  value.test.cpp
webapp/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
webapp/src/: favicon.icns  index.html  main.ts
webapp/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  material.module.ts
